# sbgl

./: .gitignore  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  COMPUTE_8md.html  Doxyfile  INDEX_8md.html  LICENSE  README.md  README_8md.html  ROADMAP.md  ROADMAP_8md.html  VULKAN_BACKEND.md  annotated.html  annotated_dup.js  batch__main_8c.html  batch__main_8c.js  batch__main_8c__incl.map  batch__main_8c__incl.md5  batch__main_8c_source.html  camera__main_8c.html  camera__main_8c.js  camera__main_8c__incl.map  camera__main_8c__incl.md5  camera__main_8c_source.html  camera__system_8md.html  classes.html  dir_000000_000003.html  dir_000000_000008.html  dir_000001_000008.html  dir_000001_000013.html  dir_000002_000008.html  dir_000003_000000.html  dir_000003_000008.html  dir_000009_000008.html  dir_000010_000003.html  dir_000010_000008.html  dir_000012_000003.html  dir_000012_000008.html  dir_000014_000008.html  (+625 more)
.github/workflows/: docs.yml
docs/: CAMERA.md  COMPUTE.md  EXAMPLES.md  INDEX.md  INPUT_SYSTEM.md  MATH_LIB.md  MEMORY.md  PLATFORM.md  RENDERING_PIPELINE.md  ROADMAP.md  VULKAN_BACKEND.md  roadmap.md
docs/examples/: index.md
docs/getting_started/: first_triangle.md  installation.md  window_setup.md
docs/manual/: camera_system.md  input_system.md  math_library.md  memory_management.md  platform_abstraction.md  rendering_pipeline.md  telemetry.md  voxel_rendering.md  vulkan_backend.md  windows_specific.md
examples/: CMakeLists.txt  cameraPersp_example.c  draw_hardcoded_triangle.c  draw_interactive_triangle.c  draw_triangle.c  example_util.h  hello_window.c  input_keyboard.c  input_mouse.c  input_test.c
examples/batching/: batch_main.c
examples/camera/: camera3d_pyramid.c  cameraOrtho_example.c  cameraPersp_example.c  camera_main.c
examples/input/: input_keyboard.c  input_mouse.c  mouse_mode.c
examples/shaders/: CMakeLists.txt  batching.vert  compute_test.comp  pyramid.vert  triangle.vert  voxel.vert  voxel3D.frag  voxel3D.vert  voxel3D_cull.comp  voxel_cull.comp  voxel_gen.comp  voxel_mesh.comp  voxel_shell.comp
examples/test/: arena_test.c  math_test.c
examples/triangle/: draw_hardcoded_triangle.c  draw_interactive_triangle.c  draw_triangle.c  triangle_main.c
examples/voxels/: stb_perlin.h  voxel3D_main.c  voxel_main.c  voxel_pool.c  voxel_pool.h
examples/window/: hello_window.c
include/: sbgl.h  sbgl_camera.h  sbgl_input.h  sbgl_math.h  sbgl_types.h  sbgl_voxel.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+75 more)
shaders/: interactive.frag  triangle_frag.h  triangle_vert.h
src/backend/: sbgl_backend_vulkan.c  sbgl_graphics_hal.h
src/core/: sbgl_batcher.c  sbgl_batcher.h  sbgl_context_internal.h  sbgl_core.c  sbgl_input.h  sbgl_internal_log.h  sbgl_log.c  sbgl_platform.h  sbgl_sort.c  sbgl_sort.h  sbgl_types.h  sbl_arena.h
src/platform/linux/: input.c  input_wayland.c  input_x11.c  linux_internal.h  window.c  window_wayland.c  window_x11.c
src/platform/win32/: input.c  win32_internal.h  window.c
src/voxel/: sbgl_pool.c  sbgl_voxel.c
tests/: CMakeLists.txt  arena_test.c  batcher_test  batcher_test.c  checkerboard_logic_test.c  compute_test.c  core_flags_test.c  gpu_memory_test.c  heightmap_test.c  input_test.c  math_test.c  packet_packing_test  packet_packing_test.c  sort_test.c  voxel_bitmask_test.c  voxel_compute_test.c  voxel_logic_test  voxel_logic_test.c  voxel_pool_test.c  voxel_visibility_test.c
